crates/ion/tests/snapshots/general__unexpected_token_1.snap
---
source: crates/core/tests/general.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Unexpected token, expected one of "(", "false", "fn(", "true", r#"\"[^\"]*\""#, r#"[a-zA-Z_][\\w_]*"#, r#"\\.\\d[\\d_]*"#, r#"\\d[\\d_]*"#, r#"\\d[\\d_]*\\."# or r#"\\d[\\d_]*\\.\\d[\\d_]*"# --> <code>:1:5
  |
1 | x = =
  |     ^

